apps/wordpress/base/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: arboretum-health
  labels:
    app: wordpress
    app.kubernetes.io/part-of: arboretum-health
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
